--- a/rekisterointi/src/main/resources/application.properties
+++ b/rekisterointi/src/main/resources/application.properties
@@ -3,5 +3,6 @@ server.servlet.context-path=/
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 management.endpoints.web.exposure.include=health
 
+otuva.jwt.issuer-uri=http://localhost:9000
 rekisterointi.palvelukayttaja.client-id=dummy
 rekisterointi.palvelukayttaja.client-secret=dummy
