--- a/varda-rekisterointi/src/test/resources/application.yml
+++ b/varda-rekisterointi/src/test/resources/application.yml
@@ -28,5 +28,6 @@ varda-rekisterointi:
     password: varda-rekisterointi
 varda-rekisterointi.palvelukayttaja.client-id: dummy
 varda-rekisterointi.palvelukayttaja.client-secret: dummy
+otuva.jwt.issuer-uri: http://localhost:9000
 
 viestinvalitys.baseurl: https://viestinvalitys.hahtuvaopintopolku.fi/lahetys
